--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cloudinary": "^1.41.0",
     "cookie": "^0.4.0",
     "cookie-parser": "~1.4.4",
+    "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.3.1",
